--- a/client/main.html
+++ b/client/main.html
@@ -8,12 +8,12 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
   <link href="https://fonts.googleapis.com/css?family=Raleway:400,500,600,900|Roboto:400,500" rel="stylesheet">
   <link rel="stylesheet" href="./main.css">
-  <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon" />
+  <link rel="shortcut icon" href="/img/favicon.ico" type="image/x-icon" />
 
   <title>Coltix Auctions</title>
 </head>
 
-<body>
+<body class="beige-bckgrnd">
   <div id="render-target">
 
   </div>
