--- a/client/main.html
+++ b/client/main.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
   <link href="https://fonts.googleapis.com/css?family=Raleway:400,500,600,900|Roboto:400,500" rel="stylesheet">
   <link rel="stylesheet" href="./main.css">
-  <link rel="shortcut icon" href="https://farm1.staticflickr.com/816/40411821914_0afa5b790b_s.jpg" type="image/x-icon" />
+  <link rel="shortcut icon" href="https://c1.staticflickr.com/1/864/27589160658_55e0325859_o.png" type="image/x-icon" />
 
   <title>Coltix Auctions</title>
 </head>
